// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAutoPhasePrompt > combines retry + discuss notes + steps in one prompt 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **auto session** — máš v jednom průchodu implementovat celou fázi.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Opakovaný pokus (průchod 3)
V některém z předchozích průchodů se nepodařilo dotáhnout všechny kroky. Co už je hotové (nebo odložené) uvidíš v sekci "Kroky" níže — soustřeď se na zbývající. Předchozí report najdeš v \`.mini/run/phase-10.prev.md\` — přečti si ho, ať víš, kde předchozí pokus skončil a na co narazil. Nový report (viz níže) předchozí přepíše.

# Aktuální fáze
**Fáze 10: Vše dohromady**
Cíl: třetí pokus s poznámkami

Kroky (vodítko k práci — neupravuj je v žádném souboru, slouží jen jako plán a referenční názvy pro report):
- [hotovo] hotový krok
- [čeká] zbývající krok

# Poznámky k fázi (z diskuse)
## Záměr
shrnutí z diskuze

# Tvůj úkol
Implementuj všechny zbývající kroky tak, aby fáze splnila svůj cíl. Kroky výše jsou vodítko k práci — pořadí a granularita je na tobě a soubory v \`.mini/state.json\` nijak needituj ručně. O posun stavu fáze a finální statusy kroků se postará uživatel přes \`mini done\` na základě reportu, který napíšeš (viz níže).

Soubory si přečti sám podle potřeby. Pracuješ v režimu acceptEdits, takže můžeš editovat bez doptávání.

# Průběžný zápis kroků
Jakmile dokončíš jeden krok, **hned** ho označ za hotový (ještě než se pustíš do dalšího):

\`\`\`
mini do --apply --step-done "<přesný název kroku ze sekce Kroky>"
\`\`\`

Název kopíruj znak po znaku ze sekce "Kroky" výše. Když session spadne, ve stavu pak bude vidět, kam až ses dostal. Finální report na konci (viz níže) zapiš tak jako tak — průběžný zápis ho nenahrazuje.


# Report na konci session
Než session ukončíš, **zapiš přes Write tool** report do souboru \`.mini/run/phase-10.md\`. Report má dvě části:

1) **YAML front matter** se strojově čitelnými statusy. Tato část se parsuje, takže struktura musí být přesná. Pravidla:
   - názvy kroků v \`steps[].title\` MUSÍ doslova odpovídat názvům v sekci "Kroky" výše (kopíruj je znak po znaku),
   - status každého kroku je právě jeden z: \`done\` (hotovo), \`skipped\` (vědomě vynecháno — vysvětli v textu), \`blocked\` (narazil jsi na blocker — popiš v textu), \`todo\` (zbývá udělat, např. nevyšel čas),
   - \`verdict\` shrnuje celou fázi a je jeden z: \`done\` (všechno hotové), \`partial\` (něco zbývá, ale nic ti nebrání pokračovat), \`blocked\` (narazil jsi na blocker, který sám neumíš obejít),
   - volitelné pole \`verify\` — seznam věcí, které jsi **sám nedokázal ověřit** a potřebují lidský pohled (vizuální UI, UX flow, subjektivní dojem). Co jde ověřit strojově (curl, testy, build), **ověř sám** a do \`verify\` to nepiš. Každá položka má \`title\` (co má člověk ověřit, povinné) a volitelně \`detail\` (kontext — co a jak jsi (ne)ověřil). Když není co ověřovat člověkem, pole vynech.

2) **Volný text** pod YAML blokem — krátké shrnutí pro člověka: co se povedlo, co ne, na co jsi narazil, otevřené otázky. Sem patří kontext, který by se do YAML statusu nevešel.

Soubor musí začínat YAML blokem přesně v tomto tvaru (uprav statusy a doplň poznámky; názvy kroků a \`phase\` neměň; \`verify\` přidej jen když je co ověřovat člověkem, jinak ho vynech):

\`\`\`
---
phase: 10
verdict: done
steps:
  - title: "hotový krok"
    status: done
  - title: "zbývající krok"
    status: done
verify:   # volitelné — vynech, když Claude ověřil všechno sám
  - title: "co má člověk ověřit (vizuální/UX věc, co nejde strojově)"
    detail: "co a jak jsi (ne)ověřil"
---

# Fáze 10 — report z auto session

(volný text — co se povedlo, co ne, poznámky pro člověka)
\`\`\`

Teprve **po zapsání reportu** session ukonči (napiš /exit nebo stiskni Ctrl+D). Bez reportu uživatel nemá z čeho posunout stav — projde se pak ručně přes interaktivní \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > inserts discuss notes block when notes are provided 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **auto session** — máš v jednom průchodu implementovat celou fázi.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Aktuální fáze
**Fáze 4: Použít poznámky z diskuze**
Cíl: auto-prompt vidí discuss notes

Kroky (vodítko k práci — neupravuj je v žádném souboru, slouží jen jako plán a referenční názvy pro report):
- [čeká] načíst notes

# Poznámky k fázi (z diskuse)
# Fáze 4 — Poznámky

## Záměr
auto má taky vidět diskusi

## Klíčová rozhodnutí
- notes se renderují identicky jako v do/plan promptu

# Tvůj úkol
Implementuj všechny zbývající kroky tak, aby fáze splnila svůj cíl. Kroky výše jsou vodítko k práci — pořadí a granularita je na tobě a soubory v \`.mini/state.json\` nijak needituj ručně. O posun stavu fáze a finální statusy kroků se postará uživatel přes \`mini done\` na základě reportu, který napíšeš (viz níže).

Soubory si přečti sám podle potřeby. Pracuješ v režimu acceptEdits, takže můžeš editovat bez doptávání.

# Průběžný zápis kroků
Jakmile dokončíš jeden krok, **hned** ho označ za hotový (ještě než se pustíš do dalšího):

\`\`\`
mini do --apply --step-done "<přesný název kroku ze sekce Kroky>"
\`\`\`

Název kopíruj znak po znaku ze sekce "Kroky" výše. Když session spadne, ve stavu pak bude vidět, kam až ses dostal. Finální report na konci (viz níže) zapiš tak jako tak — průběžný zápis ho nenahrazuje.


# Report na konci session
Než session ukončíš, **zapiš přes Write tool** report do souboru \`.mini/run/phase-4.md\`. Report má dvě části:

1) **YAML front matter** se strojově čitelnými statusy. Tato část se parsuje, takže struktura musí být přesná. Pravidla:
   - názvy kroků v \`steps[].title\` MUSÍ doslova odpovídat názvům v sekci "Kroky" výše (kopíruj je znak po znaku),
   - status každého kroku je právě jeden z: \`done\` (hotovo), \`skipped\` (vědomě vynecháno — vysvětli v textu), \`blocked\` (narazil jsi na blocker — popiš v textu), \`todo\` (zbývá udělat, např. nevyšel čas),
   - \`verdict\` shrnuje celou fázi a je jeden z: \`done\` (všechno hotové), \`partial\` (něco zbývá, ale nic ti nebrání pokračovat), \`blocked\` (narazil jsi na blocker, který sám neumíš obejít),
   - volitelné pole \`verify\` — seznam věcí, které jsi **sám nedokázal ověřit** a potřebují lidský pohled (vizuální UI, UX flow, subjektivní dojem). Co jde ověřit strojově (curl, testy, build), **ověř sám** a do \`verify\` to nepiš. Každá položka má \`title\` (co má člověk ověřit, povinné) a volitelně \`detail\` (kontext — co a jak jsi (ne)ověřil). Když není co ověřovat člověkem, pole vynech.

2) **Volný text** pod YAML blokem — krátké shrnutí pro člověka: co se povedlo, co ne, na co jsi narazil, otevřené otázky. Sem patří kontext, který by se do YAML statusu nevešel.

Soubor musí začínat YAML blokem přesně v tomto tvaru (uprav statusy a doplň poznámky; názvy kroků a \`phase\` neměň; \`verify\` přidej jen když je co ověřovat člověkem, jinak ho vynech):

\`\`\`
---
phase: 4
verdict: done
steps:
  - title: "načíst notes"
    status: done
verify:   # volitelné — vynech, když Claude ověřil všechno sám
  - title: "co má člověk ověřit (vizuální/UX věc, co nejde strojově)"
    detail: "co a jak jsi (ne)ověřil"
---

# Fáze 4 — report z auto session

(volný text — co se povedlo, co ne, poznámky pro člověka)
\`\`\`

Teprve **po zapsání reportu** session ukonči (napiš /exit nebo stiskni Ctrl+D). Bez reportu uživatel nemá z čeho posunout stav — projde se pak ručně přes interaktivní \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > reference mód: místo inline textu vykreslí odkaz + read-once podmínku 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **auto session** — máš v jednom průchodu implementovat celou fázi.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Aktuální fáze
**Fáze 40: Reference mód**
Cíl: do odkazuje místo inline

Kroky (vodítko k práci — neupravuj je v žádném souboru, slouží jen jako plán a referenční názvy pro report):
- [čeká] krok

# Poznámky k fázi (z diskuse)
Poznámky z diskuse k této fázi jsou v \`.mini/discuss/phase-40.md\`. Pokud jsi je v této session už četl (typicky při \`/mini:plan\` nebo na začátku \`auto\`), **znovu je nenačítej** — máš je v kontextu. Jinak si je teď přečti přes Read tool.

# Tvůj úkol
Implementuj všechny zbývající kroky tak, aby fáze splnila svůj cíl. Kroky výše jsou vodítko k práci — pořadí a granularita je na tobě a soubory v \`.mini/state.json\` nijak needituj ručně. O posun stavu fáze a finální statusy kroků se postará uživatel přes \`mini done\` na základě reportu, který napíšeš (viz níže).

Soubory si přečti sám podle potřeby. Pracuješ v režimu acceptEdits, takže můžeš editovat bez doptávání.

# Průběžný zápis kroků
Jakmile dokončíš jeden krok, **hned** ho označ za hotový (ještě než se pustíš do dalšího):

\`\`\`
mini do --apply --step-done "<přesný název kroku ze sekce Kroky>"
\`\`\`

Název kopíruj znak po znaku ze sekce "Kroky" výše. Když session spadne, ve stavu pak bude vidět, kam až ses dostal. Finální report na konci (viz níže) zapiš tak jako tak — průběžný zápis ho nenahrazuje.


# Report na konci session
Než session ukončíš, **zapiš přes Write tool** report do souboru \`.mini/run/phase-40.md\`. Report má dvě části:

1) **YAML front matter** se strojově čitelnými statusy. Tato část se parsuje, takže struktura musí být přesná. Pravidla:
   - názvy kroků v \`steps[].title\` MUSÍ doslova odpovídat názvům v sekci "Kroky" výše (kopíruj je znak po znaku),
   - status každého kroku je právě jeden z: \`done\` (hotovo), \`skipped\` (vědomě vynecháno — vysvětli v textu), \`blocked\` (narazil jsi na blocker — popiš v textu), \`todo\` (zbývá udělat, např. nevyšel čas),
   - \`verdict\` shrnuje celou fázi a je jeden z: \`done\` (všechno hotové), \`partial\` (něco zbývá, ale nic ti nebrání pokračovat), \`blocked\` (narazil jsi na blocker, který sám neumíš obejít),
   - volitelné pole \`verify\` — seznam věcí, které jsi **sám nedokázal ověřit** a potřebují lidský pohled (vizuální UI, UX flow, subjektivní dojem). Co jde ověřit strojově (curl, testy, build), **ověř sám** a do \`verify\` to nepiš. Každá položka má \`title\` (co má člověk ověřit, povinné) a volitelně \`detail\` (kontext — co a jak jsi (ne)ověřil). Když není co ověřovat člověkem, pole vynech.

2) **Volný text** pod YAML blokem — krátké shrnutí pro člověka: co se povedlo, co ne, na co jsi narazil, otevřené otázky. Sem patří kontext, který by se do YAML statusu nevešel.

Soubor musí začínat YAML blokem přesně v tomto tvaru (uprav statusy a doplň poznámky; názvy kroků a \`phase\` neměň; \`verify\` přidej jen když je co ověřovat člověkem, jinak ho vynech):

\`\`\`
---
phase: 40
verdict: done
steps:
  - title: "krok"
    status: done
verify:   # volitelné — vynech, když Claude ověřil všechno sám
  - title: "co má člověk ověřit (vizuální/UX věc, co nejde strojově)"
    detail: "co a jak jsi (ne)ověřil"
---

# Fáze 40 — report z auto session

(volný text — co se povedlo, co ne, poznámky pro člověka)
\`\`\`

Teprve **po zapsání reportu** session ukonči (napiš /exit nebo stiskni Ctrl+D). Bez reportu uživatel nemá z čeho posunout stav — projde se pak ručně přes interaktivní \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > renders a phase with mixed-status steps (first iteration, no notes, no retry) 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **auto session** — máš v jednom průchodu implementovat celou fázi.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Aktuální fáze
**Fáze 9: Jeden průchod Claude na fázi**
Cíl: auto pustí celou fázi v jednom Claude session

Kroky (vodítko k práci — neupravuj je v žádném souboru, slouží jen jako plán a referenční názvy pro report):
- [hotovo] Prompt builder pro celou fázi
- [hotovo] Typy reportu a .mini/run/ adresář
- [dělá se] auto.ts jeden průchod + retry smyčka
- [čeká] Snapshot testy auto-promptu
- [odloženo] starý nápad

# Tvůj úkol
Implementuj všechny zbývající kroky tak, aby fáze splnila svůj cíl. Kroky výše jsou vodítko k práci — pořadí a granularita je na tobě a soubory v \`.mini/state.json\` nijak needituj ručně. O posun stavu fáze a finální statusy kroků se postará uživatel přes \`mini done\` na základě reportu, který napíšeš (viz níže).

Soubory si přečti sám podle potřeby. Pracuješ v režimu acceptEdits, takže můžeš editovat bez doptávání.

# Průběžný zápis kroků
Jakmile dokončíš jeden krok, **hned** ho označ za hotový (ještě než se pustíš do dalšího):

\`\`\`
mini do --apply --step-done "<přesný název kroku ze sekce Kroky>"
\`\`\`

Název kopíruj znak po znaku ze sekce "Kroky" výše. Když session spadne, ve stavu pak bude vidět, kam až ses dostal. Finální report na konci (viz níže) zapiš tak jako tak — průběžný zápis ho nenahrazuje.


# Report na konci session
Než session ukončíš, **zapiš přes Write tool** report do souboru \`.mini/run/phase-9.md\`. Report má dvě části:

1) **YAML front matter** se strojově čitelnými statusy. Tato část se parsuje, takže struktura musí být přesná. Pravidla:
   - názvy kroků v \`steps[].title\` MUSÍ doslova odpovídat názvům v sekci "Kroky" výše (kopíruj je znak po znaku),
   - status každého kroku je právě jeden z: \`done\` (hotovo), \`skipped\` (vědomě vynecháno — vysvětli v textu), \`blocked\` (narazil jsi na blocker — popiš v textu), \`todo\` (zbývá udělat, např. nevyšel čas),
   - \`verdict\` shrnuje celou fázi a je jeden z: \`done\` (všechno hotové), \`partial\` (něco zbývá, ale nic ti nebrání pokračovat), \`blocked\` (narazil jsi na blocker, který sám neumíš obejít),
   - volitelné pole \`verify\` — seznam věcí, které jsi **sám nedokázal ověřit** a potřebují lidský pohled (vizuální UI, UX flow, subjektivní dojem). Co jde ověřit strojově (curl, testy, build), **ověř sám** a do \`verify\` to nepiš. Každá položka má \`title\` (co má člověk ověřit, povinné) a volitelně \`detail\` (kontext — co a jak jsi (ne)ověřil). Když není co ověřovat člověkem, pole vynech.

2) **Volný text** pod YAML blokem — krátké shrnutí pro člověka: co se povedlo, co ne, na co jsi narazil, otevřené otázky. Sem patří kontext, který by se do YAML statusu nevešel.

Soubor musí začínat YAML blokem přesně v tomto tvaru (uprav statusy a doplň poznámky; názvy kroků a \`phase\` neměň; \`verify\` přidej jen když je co ověřovat člověkem, jinak ho vynech):

\`\`\`
---
phase: 9
verdict: done
steps:
  - title: "Prompt builder pro celou fázi"
    status: done
  - title: "Typy reportu a .mini/run/ adresář"
    status: done
  - title: "auto.ts jeden průchod + retry smyčka"
    status: done
  - title: "Snapshot testy auto-promptu"
    status: done
  - title: "starý nápad"
    status: done
verify:   # volitelné — vynech, když Claude ověřil všechno sám
  - title: "co má člověk ověřit (vizuální/UX věc, co nejde strojově)"
    detail: "co a jak jsi (ne)ověřil"
---

# Fáze 9 — report z auto session

(volný text — co se povedlo, co ne, poznámky pro člověka)
\`\`\`

Teprve **po zapsání reportu** session ukonči (napiš /exit nebo stiskni Ctrl+D). Bez reportu uživatel nemá z čeho posunout stav — projde se pak ručně přes interaktivní \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > renders a phase without steps (works on whole phase, empty YAML steps) 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **auto session** — máš v jednom průchodu implementovat celou fázi.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Aktuální fáze
**Fáze 1: Bootstrap**
Cíl: CLI vrací --version

(Fáze není rozmenená na kroky — pracuj na celé fázi najednou.)

# Tvůj úkol
Implementuj všechny zbývající kroky tak, aby fáze splnila svůj cíl. Kroky výše jsou vodítko k práci — pořadí a granularita je na tobě a soubory v \`.mini/state.json\` nijak needituj ručně. O posun stavu fáze a finální statusy kroků se postará uživatel přes \`mini done\` na základě reportu, který napíšeš (viz níže).

Soubory si přečti sám podle potřeby. Pracuješ v režimu acceptEdits, takže můžeš editovat bez doptávání.


# Report na konci session
Než session ukončíš, **zapiš přes Write tool** report do souboru \`.mini/run/phase-1.md\`. Report má dvě části:

1) **YAML front matter** se strojově čitelnými statusy. Tato část se parsuje, takže struktura musí být přesná. Pravidla:
   - názvy kroků v \`steps[].title\` MUSÍ doslova odpovídat názvům v sekci "Kroky" výše (kopíruj je znak po znaku),
   - status každého kroku je právě jeden z: \`done\` (hotovo), \`skipped\` (vědomě vynecháno — vysvětli v textu), \`blocked\` (narazil jsi na blocker — popiš v textu), \`todo\` (zbývá udělat, např. nevyšel čas),
   - \`verdict\` shrnuje celou fázi a je jeden z: \`done\` (všechno hotové), \`partial\` (něco zbývá, ale nic ti nebrání pokračovat), \`blocked\` (narazil jsi na blocker, který sám neumíš obejít),
   - volitelné pole \`verify\` — seznam věcí, které jsi **sám nedokázal ověřit** a potřebují lidský pohled (vizuální UI, UX flow, subjektivní dojem). Co jde ověřit strojově (curl, testy, build), **ověř sám** a do \`verify\` to nepiš. Každá položka má \`title\` (co má člověk ověřit, povinné) a volitelně \`detail\` (kontext — co a jak jsi (ne)ověřil). Když není co ověřovat člověkem, pole vynech.

2) **Volný text** pod YAML blokem — krátké shrnutí pro člověka: co se povedlo, co ne, na co jsi narazil, otevřené otázky. Sem patří kontext, který by se do YAML statusu nevešel.

Soubor musí začínat YAML blokem přesně v tomto tvaru (uprav statusy a doplň poznámky; názvy kroků a \`phase\` neměň; \`verify\` přidej jen když je co ověřovat člověkem, jinak ho vynech):

\`\`\`
---
phase: 1
verdict: done
steps:
  []  # fáze nemá kroky — nech prázdný seznam
verify:   # volitelné — vynech, když Claude ověřil všechno sám
  - title: "co má člověk ověřit (vizuální/UX věc, co nejde strojově)"
    detail: "co a jak jsi (ne)ověřil"
---

# Fáze 1 — report z auto session

(volný text — co se povedlo, co ne, poznámky pro člověka)
\`\`\`

Teprve **po zapsání reportu** session ukonči (napiš /exit nebo stiskni Ctrl+D). Bez reportu uživatel nemá z čeho posunout stav — projde se pak ručně přes interaktivní \`mini done\`.
"
`;

exports[`buildAutoPhasePrompt > renders retry block with iteration number and previous report path 1`] = `
"Jsi součástí nástroje, který pomáhá uživateli budovat projekt postupně.
Právě probíhá **auto session** — máš v jednom průchodu implementovat celou fázi.

# Projekt
# Můj projekt
Stavím nástroj X pro Y.

# Opakovaný pokus (průchod 2)
V některém z předchozích průchodů se nepodařilo dotáhnout všechny kroky. Co už je hotové (nebo odložené) uvidíš v sekci "Kroky" níže — soustřeď se na zbývající. Předchozí report najdeš v \`.mini/run/phase-5.prev.md\` — přečti si ho, ať víš, kde předchozí pokus skončil a na co narazil. Nový report (viz níže) předchozí přepíše.

# Aktuální fáze
**Fáze 5: Retry kontext**
Cíl: druhý pokus dostane info o předchozím

Kroky (vodítko k práci — neupravuj je v žádném souboru, slouží jen jako plán a referenční názvy pro report):
- [hotovo] krok A
- [čeká] krok B

# Tvůj úkol
Implementuj všechny zbývající kroky tak, aby fáze splnila svůj cíl. Kroky výše jsou vodítko k práci — pořadí a granularita je na tobě a soubory v \`.mini/state.json\` nijak needituj ručně. O posun stavu fáze a finální statusy kroků se postará uživatel přes \`mini done\` na základě reportu, který napíšeš (viz níže).

Soubory si přečti sám podle potřeby. Pracuješ v režimu acceptEdits, takže můžeš editovat bez doptávání.

# Průběžný zápis kroků
Jakmile dokončíš jeden krok, **hned** ho označ za hotový (ještě než se pustíš do dalšího):

\`\`\`
mini do --apply --step-done "<přesný název kroku ze sekce Kroky>"
\`\`\`

Název kopíruj znak po znaku ze sekce "Kroky" výše. Když session spadne, ve stavu pak bude vidět, kam až ses dostal. Finální report na konci (viz níže) zapiš tak jako tak — průběžný zápis ho nenahrazuje.


# Report na konci session
Než session ukončíš, **zapiš přes Write tool** report do souboru \`.mini/run/phase-5.md\`. Report má dvě části:

1) **YAML front matter** se strojově čitelnými statusy. Tato část se parsuje, takže struktura musí být přesná. Pravidla:
   - názvy kroků v \`steps[].title\` MUSÍ doslova odpovídat názvům v sekci "Kroky" výše (kopíruj je znak po znaku),
   - status každého kroku je právě jeden z: \`done\` (hotovo), \`skipped\` (vědomě vynecháno — vysvětli v textu), \`blocked\` (narazil jsi na blocker — popiš v textu), \`todo\` (zbývá udělat, např. nevyšel čas),
   - \`verdict\` shrnuje celou fázi a je jeden z: \`done\` (všechno hotové), \`partial\` (něco zbývá, ale nic ti nebrání pokračovat), \`blocked\` (narazil jsi na blocker, který sám neumíš obejít),
   - volitelné pole \`verify\` — seznam věcí, které jsi **sám nedokázal ověřit** a potřebují lidský pohled (vizuální UI, UX flow, subjektivní dojem). Co jde ověřit strojově (curl, testy, build), **ověř sám** a do \`verify\` to nepiš. Každá položka má \`title\` (co má člověk ověřit, povinné) a volitelně \`detail\` (kontext — co a jak jsi (ne)ověřil). Když není co ověřovat člověkem, pole vynech.

2) **Volný text** pod YAML blokem — krátké shrnutí pro člověka: co se povedlo, co ne, na co jsi narazil, otevřené otázky. Sem patří kontext, který by se do YAML statusu nevešel.

Soubor musí začínat YAML blokem přesně v tomto tvaru (uprav statusy a doplň poznámky; názvy kroků a \`phase\` neměň; \`verify\` přidej jen když je co ověřovat člověkem, jinak ho vynech):

\`\`\`
---
phase: 5
verdict: done
steps:
  - title: "krok A"
    status: done
  - title: "krok B"
    status: done
verify:   # volitelné — vynech, když Claude ověřil všechno sám
  - title: "co má člověk ověřit (vizuální/UX věc, co nejde strojově)"
    detail: "co a jak jsi (ne)ověřil"
---

# Fáze 5 — report z auto session

(volný text — co se povedlo, co ne, poznámky pro člověka)
\`\`\`

Teprve **po zapsání reportu** session ukonči (napiš /exit nebo stiskni Ctrl+D). Bez reportu uživatel nemá z čeho posunout stav — projde se pak ručně přes interaktivní \`mini done\`.
"
`;
